<resources>
    <string name="app_name">AudioLibros</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_book_list">Books</string>
    <string name="title_book_detail">Book Detail</string>
    <string name="img_desc_cover_image">Cover Image</string>
    <string name="action_last_read">Last Read</string>
    <string name="action_search">Search</string>
    <string name="action_about">About...</string>
    <string name="drawer_open">Navigation drawer abierto</string>
    <string name="drawer_close">Navigation drawer cerrado</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="lbl_tab_all">Todos</string>
    <string name="lbl_tab_new">Nuevos</string>
    <string name="lbl_tab_read">Leidos</string>
    <string name="lbl_genre_all">Todos los géneros</string>
    <string name="lbl_genre_epic">Poema épico</string>
    <string name="lbl_genre_xix">Literatura siglo XIX</string>
    <string name="lbl_genre_suspense">Suspense</string>
    <string name="lbl_subtitle_drawer">Acciones adicionales</string>
    <string name="lbl_share">Compartir</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="lbl_widget_launch_app">Launch App</string>
    <string name="lbl_widget_main_action">Main Action</string>
    <string name="lbl_widget_book_cover">Book Cover</string>
    <string name="error_playing">Error Playing</string>

    <string name="media_notification_title_template">Media: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="media_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="notification_channel_title">AudioBooks Player</string>
    <string name="btn_play">Play</string>
    <string name="btn_stop">Stop</string>
</resources>
