<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_all_genres"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/lbl_genre_all" />
        <item android:id="@+id/nav_epic_genre"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/lbl_genre_epic" />
        <item android:id="@+id/nav_XIX_genre"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/lbl_genre_xix" />
        <item android:id="@+id/nav_suspense_genre"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/lbl_genre_suspense" />
    </group>


    <item android:title="@string/lbl_subtitle_drawer">
        <menu>
            <item android:id="@+id/nav_preferencias"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/action_settings"  />
            <item android:id="@+id/nav_compartir"
                android:icon="@drawable/ic_share_24dp"
                android:title="@string/lbl_share" />
        </menu>
    </item>

</menu>