<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.upv.audiolibros.view.BookListActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_last_read"
        android:icon="@drawable/ic_skip_previous_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/action_last_read"/>

    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:orderInCategory="90"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
