<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_wrapper"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        tools:src="@drawable/avecilla"
        android:contentDescription="@string/lbl_widget_book_cover" />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:lines="1"
            tools:text="Book Title" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:lines="1"
            tools:text="Book Author" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/action_play"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_action_play"
        android:contentDescription="@string/lbl_widget_main_action" />

    <ImageButton
        android:id="@+id/action_launch"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_action_launch"
        android:contentDescription="@string/lbl_widget_launch_app" />

</LinearLayout>